[gd_scene load_steps=5 format=3 uid="uid://dfnjf8lw28kon"]

[ext_resource type="Script" uid="uid://uv8krdwx57yr" path="res://Scripts/physics_tooth_slot.gd" id="1_eqp0r"]
[ext_resource type="Texture2D" uid="uid://b6sa7ky0g7g5e" path="res://Assets/tooth.png" id="2_xg7v8"]
[ext_resource type="Script" uid="uid://cslauip3gmg4" path="res://Scripts/ToothDropArea.gd" id="3_bhxfy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xg7v8"]
size = Vector2(60, 60)

[node name="PhysicsToothSlot" type="RigidBody2D"]
input_pickable = true
gravity_scale = 0.0
script = ExtResource("1_eqp0r")

[node name="Background" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(0.517184, 0.517184, 0.517184, 1)

[node name="ToothIcon" type="TextureRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
pivot_offset = Vector2(20, 20)
texture = ExtResource("2_xg7v8")

[node name="ToothLabel" type="Label" parent="."]
offset_left = -30.0
offset_top = 22.0
offset_right = 30.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 32
text = "Slot"
horizontal_alignment = 1

[node name="TattooContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(25, 60)
offset_left = 30.0
offset_top = -30.0
offset_right = 70.0
offset_bottom = 30.0
theme_override_constants/separation = 3
alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xg7v8")

[node name="DropArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(40, 40)
script = ExtResource("3_bhxfy")
